# AI_CSquizapp_OllamaBased

./: README.md
backend/: database.db  example.db  pyproject.toml  server.py
backend/src/: ai_generator.py  utils.py
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/routes/: challenge.py
frontend/: .env  package-lock.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/auth/: AuthenticationPage.jsx  ClerkProviderWithRoutes.jsx
frontend/src/challenge/: ChallengeGenerator.jsx
frontend/src/layout/: Layout.jsx
frontend/src/utils/: api.js
